add 274. H-index; sol_1: sort and sol_2: brute-force with two loops

--- a/leetcode/.vscode/settings.json
+++ b/leetcode/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "string": "cpp"
+        "string": "cpp",
+        "barrier": "cpp",
+        "chrono": "cpp",
+        "random": "cpp",
+        "latch": "cpp",
+        "limits": "cpp",
+        "semaphore": "cpp",
+        "valarray": "cpp"
     }
 }
