add 205. isomorphic strings: gotta review this one in the future

--- a/leetcode/.vscode/settings.json
+++ b/leetcode/.vscode/settings.json
@@ -20,6 +20,8 @@
         "initializer_list": "cpp",
         "ranges": "cpp",
         "span": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "bitset": "cpp",
+        "algorithm": "cpp"
     }
 }
