--- a/leetcode/.vscode/settings.json
+++ b/leetcode/.vscode/settings.json
@@ -22,6 +22,7 @@
         "span": "cpp",
         "regex": "cpp",
         "bitset": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "*.tcc": "cpp"
     }
 }
