63. Unique Paths II: Bottom-up 1-d DP

--- a/leetcode/.vscode/settings.json
+++ b/leetcode/.vscode/settings.json
@@ -23,6 +23,7 @@
         "regex": "cpp",
         "bitset": "cpp",
         "algorithm": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "utility": "cpp"
     }
 }
